# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-04-04 17:41:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-53

    Summary:
      documentation, update XML chapter
    Revision:
      itools--main--0.8--patch-53


    new files:
     doc/examples/chapter7/.arch-ids/=id
     doc/examples/chapter7/.arch-ids/namespaces.py.id
     doc/examples/chapter7/.arch-ids/parser.py.id
     doc/examples/chapter7/namespaces.py
     doc/examples/chapter7/parser.py

    modified files:
     Changelog doc/files.tex doc/xml.tex xhtml/XHTML.py

    renamed files:
     doc/examples/.arch-ids/hello.xml.id
       ==> doc/examples/chapter7/.arch-ids/hello.xml.id
     doc/examples/hello.xml
       ==> doc/examples/chapter7/hello.xml

    new directories:
     doc/examples/chapter7 doc/examples/chapter7/.arch-ids


2005-04-04 17:41:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-52

    Summary:
      xml, improve parser programming interface
    Revision:
      itools--main--0.8--patch-52

    Now text events contain the whole data and not one character
    at time.  For example "hello" becomes "hello" and not "h",
    "e", "l", "l", "o".
    
    Also, now the entry point is "xml.parser.parse" instead of
    "xml.parser.parser.parse".

    modified files:
     Changelog xml/XML.py xml/parser.py


2005-04-01 16:51:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-51

    Summary:
      xml, improving dublin core, removing obsolete code
    Revision:
      itools--main--0.8--patch-51


    modified files:
     Changelog xml/DublinCore.py xml/Schema.py


2005-04-01 13:25:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-50

    Summary:
      xml, fix fix fix
    Revision:
      itools--main--0.8--patch-50


    new files:
     xml/.arch-ids/exceptions.py.id xml/exceptions.py

    modified files:
     Changelog handlers/IO.py html/parser.py xhtml/XHTML.py